2024-10-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Switch some URLs from http to https

2024-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2024-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/xtsMod.cpp (RCPP_MODULE): Correct docstring

2022-11-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.6

	* src/init.c: Add 'void' for proper prototypes pleasing clang-15

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.5

2022-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* .github/workflows/ci.yaml (jobs): Use r2u

2022-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Adjust URLs to https
	* inst/NEWS.Rd: Idem

2021-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (URL, BugReports): Added to DESCRIPTION

2021-01-13  Dirk Eddelbuettel  <edd@debian.org>

        * .github/workflows/ci.yaml: Add CI runner using r-ci
	* README.md: Add new badge

2020-07-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/xtsMod.cpp: Add 'check_names' argument to xtsMerge
	* man/RcppXts-package.Rd: Document it

	* tests/checks.R: Tweak, but still skip xtsMerge example

	* src/init.c: Added to register Rcpp Modules 'boot' routine

2020-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* README.md: Add a 'last commit' badge

	* tests/checks.R: Comment-out two checks for now

	* .travis.yml: Switch to 'bionic' and R 4.0

2018-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Add .registration=TRUE to useDynLib()
